--- a/components/QuantitySelector/QuantitySelector.scss
+++ b/components/QuantitySelector/QuantitySelector.scss
@@ -6,8 +6,8 @@
   transition: all 300ms ease;
 
   &:hover {
-    border-color: #ff6b6b;
-    box-shadow: 0 8px 24px rgba(255, 107, 107, 0.1);
+    /* border-color: #ff6b6b; */
+    /* box-shadow: 0 8px 24px rgba(255, 107, 107, 0.1); */
   }
 }
 
@@ -82,8 +82,8 @@
   gap: 1rem;
 
   &:hover {
-    border-color: #ff6b6b;
-    box-shadow: 0 6px 18px rgba(255, 107, 107, 0.12);
+    /* border-color: #ff6b6b; */
+    /* box-shadow: 0 6px 18px rgba(255, 107, 107, 0.12); */
     transform: translateY(-2px);
   }
 }
@@ -320,4 +320,10 @@
     padding: 0.7rem 0.7rem;
     flex-wrap: wrap;
   }
+}
+
+.qs-container.qs-disabled {
+  opacity: 0.5;
+  pointer-events: none;
+  filter: grayscale(1);
 }
